--- a/Server/WebAPI/WebAPI.csproj
+++ b/Server/WebAPI/WebAPI.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Shared\DTOs\DTOs.csproj" />
+      <ProjectReference Include="..\..\Shared\ApiContracts\ApiContracts.csproj" />
       <ProjectReference Include="..\Entities\Entities.csproj" />
       <ProjectReference Include="..\FileRepositories\FileRepositories.csproj" />
       <ProjectReference Include="..\RepositoryContracts\RepositoryContracts.csproj" />
