create and view posts works
cant figure out how to put username instead of user id when viewing posts

--- a/Client/BlazorApp1/BlazorApp1.csproj
+++ b/Client/BlazorApp1/BlazorApp1.csproj
@@ -7,7 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Server\Entities\Entities.csproj" />
       <ProjectReference Include="..\..\Shared\ApiContracts\ApiContracts.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\css\auth.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\home.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\welcome.css" />
     </ItemGroup>
 
 </Project>
