--- a/Server/Entities/Entities.csproj
+++ b/Server/Entities/Entities.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Shared\ApiContracts\ApiContracts.csproj" />
+    </ItemGroup>
+
 </Project>
